[gd_scene load_steps=5 format=2]

[ext_resource path="res://themes/InGameLargeFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/Game/LandedState.gd" type="Script" id=2]
[ext_resource path="res://themes/InGameTheme.tres" type="Theme" id=3]

[sub_resource type="Animation" id=1]
resource_name = "FadeMenu"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="LandedState" type="Node2D"]
z_as_relative = false
script = ExtResource( 2 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas"]
margin_left = 2.0
margin_top = 129.0
margin_right = 962.0
margin_bottom = 540.0
theme = ExtResource( 3 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LandedLabel" type="Label" parent="Canvas/VBoxContainer"]
margin_right = 960.0
margin_bottom = 38.0
text = "Landing Successful!"
align = 1

[node name="TimeLabel" type="Label" parent="Canvas/VBoxContainer"]
margin_top = 58.0
margin_right = 960.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 1 )
text = "00:00:00"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Canvas/VBoxContainer"]
margin_top = 148.0
margin_right = 960.0
margin_bottom = 192.0
custom_constants/separation = 40
alignment = 1

[node name="MenuButton" type="Button" parent="Canvas/VBoxContainer/HBoxContainer"]
margin_left = 193.0
margin_right = 357.0
margin_bottom = 44.0
text = "Main Menu"

[node name="TryAgainButton" type="Button" parent="Canvas/VBoxContainer/HBoxContainer"]
margin_left = 397.0
margin_right = 557.0
margin_bottom = 44.0
text = "Try Again"

[node name="NextLevelButton" type="Button" parent="Canvas/VBoxContainer/HBoxContainer"]
margin_left = 597.0
margin_right = 767.0
margin_bottom = 44.0
text = "Next Level"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Canvas"]
anims/FadeMenu = SubResource( 1 )
[connection signal="pressed" from="Canvas/VBoxContainer/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Canvas/VBoxContainer/HBoxContainer/TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="Canvas/VBoxContainer/HBoxContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
